--- a/coe-client/src/DD/AppDD.css
+++ b/coe-client/src/DD/AppDD.css
@@ -4,129 +4,175 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+}
+
+/* Table CSS */
+.container {
+  position: relative;
+  margin: 80px 70px 70px;
+  box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
   font-family: "Josefin Sans", sans-serif;
 }
 
-.App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-}
-
-.app-container {
-  display: grid;
-  grid-template-columns: 94% 6%;
-  height: 100vh;
-  width: 100%;
-}
-
-.content {
-  padding: 20px;
-  background-color: #f2f2f2;
-  display: grid;
-  place-items: center;
-}
-
-/* ***********  SideBar CSS Starts here *********** */
-
-.sidebar {
-  background-color: #0c59f2;
-  /* padding: 20px 10px; */
-}
-.nav-links {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  list-style-type: none;
-  padding: 50px 0;
-  margin: 0;
-  height: 100vh;
-}
-
-.icon {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 10px;
-}
-
-.icon-link {
-  text-decoration: none;
-  color: #000;
-}
-
-.icon-circle {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-}
-
-.horizontal-line {
-  width: 2px;
-  background-color: #000;
-  height: 50%;
-  margin: 5px 5px;
-}
-
-/* ***********  Sidebar CSS Ends here *********** */
-
-/* ***********  Run Details CSS Starts here *********** */
-.runDetailBox {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  height: 70%;
-  gap: 30px;
-}
-
-.runBox-1 {
-  position: relative;
-  width: calc(25% - 30px);
-  height: 80%;
-  background-color: #ffffff;
-  border-radius: 10px;
-  z-index: 100;
-  box-shadow: 0 0 10px rgb(159, 153, 153);
-  display: flex;
-  /* justify-content: center; */
-  align-items: center;
-  flex-direction: column; /* Added */
-}
-
-.button-group {
-  margin-top: 50%; 
-  display: block;
-  
-}
-.button-group button{
-  display: inline-flex;
-  border: 1px solid;
-  padding: 10px 20px;
-  width: 100%;
-  box-sizing: border-box;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-.runBox-1::before {
-  content: "";
-  position: absolute;
-  width: 200px;
-  height: 70px;
-  background: #a191dd;
+table {
   border-radius: 5px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: -1;
+  font-size: 12px;
+  font-weight: normal;
+  border: none;
+  border-collapse: collapse;
+  width: 100%;
+  max-width: 100%;
+  white-space: nowrap;
+  background-color: white;
+  border: 1px solid #1a2929;
 }
 
-/* ***********  Run Details CSS Ends here *********** */
+td,
+th {
+  text-align: center;
+  padding: 8px;
+  border-right: 1px solid #1a2929;
+}
+
+td {
+  font-size: 12px;
+}
+
+thead th {
+  color: #ffffff;
+  background: #1a2929;
+}
+
+tr:nth-child(even) {
+  background: #9edfd3;
+}
+
+.table-custom-button {
+  background-color: #4caf50;
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 14px;
+  display: inline-flex;
+}
+
+.table-custom-button:hover {
+  background-color: #45a049;
+}
+
+/* Pagination CSS */
+.pagination-container {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  padding: 20px;
+  position: sticky;
+  bottom: 0;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination a,
+.pagination .active a {
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+  border: 1px solid #ccc;
+  margin: 0 4px;
+  cursor: pointer;
+}
+.pagination li {
+  list-style: none;
+}
+
+.pagination .active a {
+  background: #9edfd3;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #f2f2f2;
+}
+
+.table-custom-button.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+  cursor: not-allowed;
+}
+
+@media (max-width: 767px) {
+  table {
+    display: block;
+    width: 100%;
+  }
+  thead,
+  tbody,
+  thead th {
+    display: block;
+  }
+
+  thead th:last-child {
+    border-bottom: none;
+  }
+
+  thead {
+    float: left;
+  }
+
+  tbody {
+    width: auto;
+    position: relative;
+    overflow-x: auto;
+  }
+
+  td,
+  th {
+    padding: 20px 0.625em 0.625em 0.625em;
+    height: 60px;
+    vertical-align: middle;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 120px;
+    font-size: 13px;
+    text-overflow: ellipsis;
+  }
+
+  thead th {
+    text-align: left;
+    border-bottom: 1px solid #f7f7f9;
+  }
+
+  tbody tr {
+    display: table-cell;
+  }
+
+  tbody tr:nth-child(odd) {
+    background: none;
+  }
+
+  tr:nth-child(even) {
+    background: transparent;
+  }
+
+  tr td:nth-child(odd) {
+    background: #f8f8f8;
+    border-right: 1px solid #1a2929;
+  }
+
+  tr td:nth-child(even) {
+    background-color: #9edfd3;
+    border-right: 1px solid #1a2929;
+  }
+
+  tbody td {
+    display: block;
+    text-align: center;
+  }
+}
