--- a/coe-client/src/DA/components/DA.css
+++ b/coe-client/src/DA/components/DA.css
@@ -1,12 +1,14 @@
 /* ***********   RunsForm Start       ************** */
 
+   
+
 .runs-form {
 
-  background-color: #362d2d22; /* Updated background color */
+  background-color: #f5f5f5;
 
   padding: 20px;
 
-  border-radius: 5px;
+  border-radius: 10px;
 
   margin: 0 auto;
 
@@ -18,22 +20,28 @@
 
   align-items: center;
 
-  height: 55vh;
+  box-shadow: 10px 10px 10px -6px rgba(0, 0, 0, 0.373);
 
-  box-shadow: 0px 0px 10px rgba(16, 16, 16, 0.1);
+  transform-style: preserve-3d;
+
+  transform: perspective(1000px);
 
 }
 
 
 
 
+
+
 .form-title {
 
-  color: #000; /* Updated text color */
+  color: #333;
 
   font-size: 24px;
 
   margin-bottom: 20px;
+
+  text-align: center;
 
 }
 
@@ -53,7 +61,7 @@
 
 .label {
 
-  color: #000; /* Updated text color */
+  color: #333;
 
   font-weight: bold;
 
@@ -72,7 +80,7 @@
 
   border-radius: 5px;
 
-  background-color: #fff; /* Updated background color */
+  background-color: #fff;
 
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 
@@ -121,6 +129,10 @@
 
   transition: background-color 0.3s ease;
 
+  font-weight: bold;
+
+  text-transform: uppercase;
+
 }
 
 
@@ -163,19 +175,20 @@
 
 }
 
-.inputTitle{
 
-  color: #1f1912; /* Updated text color */
 
-  font-size:15px;
+
+.inputTitle {
+
+  color: #333;
+
+  font-size: 15px;
 
   margin-bottom: 5px;
 
 }
 
- 
 
-   
 
 
 
@@ -185,23 +198,42 @@
 
 
 
-
-
 /* ***********LoginForm Start**************** */
+
+
+
 
 .login-container {
 
   display: flex;
 
+
+
+
   flex-direction: column;
+
+
+
 
   align-items: center;
 
+
+
+
   justify-content: center;
+
+
+
 
   height: 100vh;
 
+
+
+
   background-color: #ecdedec7;
+
+
+
 
   box-shadow: 0 0 10px rgba(198, 31, 31, 0.644);
 
@@ -214,9 +246,18 @@
 
   text-align: center;
 
+
+
+
   margin-top: 50px;
 
+
+
+
   color: #4c4040;
+
+
+
 
   font-size: 24px;
 
@@ -229,17 +270,38 @@
 
   display: flex;
 
+
+
+
   flex-direction: column;
+
+
+
 
   align-items: center;
 
+
+
+
   width: 300px;
+
+
+
 
   padding: 20px;
 
+
+
+
   border-radius: 5px;
 
+
+
+
   background-color: #fff;
+
+
+
 
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 
@@ -252,11 +314,23 @@
 
   width: 100%;
 
+
+
+
   padding: 10px;
+
+
+
 
   margin-bottom: 10px;
 
+
+
+
   border: 1px solid #ccc;
+
+
+
 
   border-radius: 5px;
 
@@ -269,13 +343,28 @@
 
   background-color: #4caf50;
 
+
+
+
   color: #fff;
+
+
+
 
   border: none;
 
+
+
+
   padding: 10px 20px;
 
+
+
+
   border-radius: 5px;
+
+
+
 
   cursor: pointer;
 
@@ -297,12 +386,17 @@
 
   text-align: center;
 
+
+
+
   color: red;
+
+
+
 
   margin-top: 10px;
 
 }
-
 
 
 
@@ -314,100 +408,56 @@
 
 /* ***********CheckList start**************** */
 
-.checklist-container {
-
-  max-width: 600px;
-
-  margin: 0 auto;
-
-}
 
 
 
 
-.checklist-question {
 
-  margin-bottom: 10px;
-
-}
+/* .CheckListButton{
 
 
 
 
-.checklist-result {
-
-  margin-top: 20px;
-
-}
-
-
-
-
-.checklist-result li {
-
-  color: #fff;
-
-  padding: 5px;
-
-  margin-bottom: 5px;
-
-  list-style-type: none;
-
-}
-
-
-
-
-.checklist-result .pass {
-
-  background-color: #2ecc71;
-
-}
-
-
-
-
-.checklist-result .fail {
-
-  background-color: #e74c3c;
-
-}
-
-
-
-
+} */
 
 .checklist-table {
 
-  width: 100%;
+  width: 85%; /* Adjust the width as desired */
+
+  margin: 40px auto;
 
   border-collapse: collapse;
 
   margin-bottom: 20px;
 
+  box-shadow: 10px 10px 10px  rgba(49, 48, 50, 0.94);
+
 }
 
 
 
 
-.checklist-table th,
+.checklist-table th{
+
+  border: 1px solid #e6dddd;
+
+  padding: 12px;
+
+}
 
 .checklist-table td {
 
   border: 1px solid #ac6969;
 
-  padding: 8px;
+  padding: 12px;
 
   text-align: left;
 
-}
+  background-color: #e7ece0c4;
 
+  box-shadow: 0px 0px 5px rgba(12, 12, 12, 0.1);
 
-
-
-.checklist-table th {
-
-  background-color: #83c716c4;
+  font-family: "Arial Black", sans-serif; /* Set a stylish font */
 
 }
 
@@ -416,11 +466,15 @@
 
 .checklist-result table {
 
-  width: 100%;
+  width: 80%; /* Adjust the width as desired */
+
+  margin: 0 auto;
 
   border-collapse: collapse;
 
   margin-top: 20px;
+
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 
 }
 
@@ -433,7 +487,137 @@
 
   border: 1px solid #ccc;
 
-  padding: 8px;
+  padding: 12px;
+
+  text-align: left;
+
+  background-color: #f2f2f2;
+
+  box-shadow: 0px 0px 5px rgba(39, 177, 223, 0.1);
+
+  font-family: "Arial Black", sans-serif; /* Set a stylish font */
+
+}
+
+
+
+
+.checklist-table tr:hover {
+
+  box-shadow: 0px 0px 5px rgba(11, 11, 11, 0.91);
+
+}
+
+
+
+
+.checklist-table label {
+
+  margin-right: 10px;
+
+}
+
+.button-container {
+
+  display: flex;
+
+  justify-content: center;
+
+  margin-top: 30px; /* Adjust the top margin as needed */
+
+}
+
+
+
+
+.submit-button {
+
+  background-color: rgb(10, 115, 157);
+
+  color: white;
+
+  padding: 10px 20px; /* Adjust the padding as needed */
+
+  font-size: 18px; /* Adjust the font size as needed */
+
+  border: none;
+
+  border-radius: 5px;
+
+  cursor: pointer;
+
+  transition: background-color 0.3s ease;
+
+}
+
+
+
+
+.submit-button:hover {
+
+  background-color: #00bfff; /* Darker shade of skyblue on hover */
+
+}
+
+
+
+
+
+.shaded-column {
+
+  background-color: transparent !important;
+
+  box-shadow: none !important;
+
+}
+
+.user-role {
+
+  text-align: left;
+
+  color: blue;
+
+  font-size: 16px;
+
+  font-weight: bold;
+
+}
+
+
+
+
+
+
+
+
+
+/* ***********CheckList end**************** */
+
+
+
+
+/* ***********preSynthesis start**************** */
+
+.report-table {
+
+  width: 100%;
+
+  margin-top: 20px;
+
+  border-collapse: separate;
+
+  border-spacing: 0;
+
+}
+
+
+
+
+.report-table th,
+
+.report-table td {
+
+  padding: 10px;
 
   text-align: left;
 
@@ -442,37 +626,83 @@
 
 
 
-.checklist-result th {
+.report-table th {
 
-  background-color: #f2f2f2;
+  background-color: #0b0b0b;
 
-}
+  font-weight: bold;
 
-
-
-
-.checklist-result .pass {
-
-  background-color: #c5e1a5;
+  color: #ffffff;
 
 }
 
 
 
 
-.checklist-result .fail {
+.report-table tbody tr:nth-child(even) {
 
-  background-color: #ef9a9a;
-
-}
-
-.TableHead{
-
-  background-color: #d32f2f;
+  background-color: #f9f9f9;
 
 }
 
 
 
 
-/* ***********CheckList end**************** */
+.report-table tbody tr:hover {
+
+  background-color: #ebebeb;
+
+}
+
+
+
+
+.report-table td {
+
+  border: 1px solid #ccc;
+
+  padding: 12px;
+
+  text-align: left;
+
+  background-color: #eceff2eb;
+
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.64);
+
+  font-family: "Arial Black", sans-serif; /* Set a stylish font */
+
+}
+
+
+
+
+.report-table td:first-child {
+
+  border-left: 1px solid #000000;
+
+}
+
+
+
+
+.report-table td:last-child {
+
+  border-right: 1px solid #000000;
+
+}
+
+
+
+
+.report-table tbody tr:hover td {
+
+  background-color: #d4f4d4; /* Highlight with green color on hover */
+
+}
+
+
+
+
+
+
+/* ***********preSynthesis end**************** */
